200 nginx add-on - public/kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${name}
  namespace: ${namespace}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  #- host: <Hostname>
  - http:
      paths:
      - backend:
          service:
            name: ${name}
            port:
              number: 80
        path: ${path}
        pathType: Prefix
